Bug 121997 - Pass VM instead of ExecState to JSDateMath functions.
Summary: Pass VM instead of ExecState to JSDateMath functions.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-26 17:23 PDT by Andreas Kling
Modified: 2013-09-27 06:39 PDT (History)
3 users (show)

See Also:


Attachments
Patch (13.75 KB, patch)
2013-09-26 17:24 PDT, Andreas Kling
ggaren: review+
webkit-ews: commit-queue-
Details | Formatted Diff | Diff
patch + Qt's buildfix upload for EWS (14.32 KB, patch)
2013-09-27 03:38 PDT, Ádám Kallai
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-09-26 17:23:24 PDT
Fewer loadz.
Comment 1 Andreas Kling 2013-09-26 17:24:31 PDT
Created attachment 212771 [details]
Patch
Comment 2 Geoffrey Garen 2013-09-26 18:43:49 PDT
Comment on attachment 212771 [details]
Patch

r=me

Please test with SunSpider before landing. Date code is hot.
Comment 3 Early Warning System Bot 2013-09-27 01:39:43 PDT
Comment on attachment 212771 [details]
Patch

Attachment 212771 [details] did not pass qt-ews (qt):
Output: http://webkit-queues.appspot.com/results/2651085
Comment 4 Early Warning System Bot 2013-09-27 01:42:48 PDT
Comment on attachment 212771 [details]
Patch

Attachment 212771 [details] did not pass qt-wk2-ews (qt-wk2):
Output: http://webkit-queues.appspot.com/results/2657074
Comment 5 Ádám Kallai 2013-09-27 03:38:24 PDT
Created attachment 212793 [details]
patch + Qt's buildfix upload for EWS

Original patch with the Qt build fix.
Comment 6 Andreas Kling 2013-09-27 06:12:01 PDT
(In reply to comment #2)
> (From update of attachment 212771 [details])
> r=me
> 
> Please test with SunSpider before landing. Date code is hot.

                                  TipOfTree                 MyChanges                                     

3d-cube                         4.9877+-0.2987     ?      5.1770+-0.5713        ? might be 1.0379x slower
3d-morph                        5.3758+-0.1785     ?      5.7219+-1.3982        ? might be 1.0644x slower
3d-raytrace                     6.3347+-0.5798            6.1641+-0.2990          might be 1.0277x faster
access-binary-trees             1.3230+-0.0243     ?      1.4241+-0.3608        ? might be 1.0764x slower
access-fannkuch                 5.5754+-1.5301            5.1436+-0.2968          might be 1.0840x faster
access-nbody                    2.6208+-0.1663            2.5538+-0.0863          might be 1.0263x faster
access-nsieve                   3.2491+-0.1368            3.1920+-0.1632          might be 1.0179x faster
bitops-3bit-bits-in-byte        1.3702+-0.0167     ?      1.3938+-0.0598        ? might be 1.0172x slower
bitops-bits-in-byte             1.8738+-0.1132     ?      1.9144+-0.1530        ? might be 1.0217x slower
bitops-bitwise-and              1.9571+-0.1045     ?      1.9789+-0.0134        ? might be 1.0112x slower
bitops-nsieve-bits              3.1012+-0.3828            3.0340+-0.1506          might be 1.0221x faster
controlflow-recursive           2.0390+-0.3303            1.9103+-0.0322          might be 1.0674x faster
crypto-aes                      3.5929+-0.2205     ?      3.6429+-0.1184        ? might be 1.0139x slower
crypto-md5                      2.2891+-0.2933            2.2223+-0.0954          might be 1.0300x faster
crypto-sha1                     2.3438+-0.5581            2.1830+-0.1595          might be 1.0736x faster
date-format-tofte               7.8984+-1.2118            7.5338+-0.3843          might be 1.0484x faster
date-format-xparb               5.4058+-0.4731            5.3547+-0.1553        
math-cordic                     3.0372+-0.6527            2.8881+-0.3074          might be 1.0517x faster
math-partial-sums               5.2950+-0.0647     ?      5.8019+-0.8880        ? might be 1.0957x slower
math-spectral-norm              1.7039+-0.1308            1.7010+-0.1127        
regexp-dna                      8.6740+-2.2306            8.0237+-0.4082          might be 1.0810x faster
string-base64                   3.5247+-0.1739     ?      3.7274+-0.3814        ? might be 1.0575x slower
string-fasta                   11.1337+-0.3270     ?     11.8120+-1.0332        ? might be 1.0609x slower
string-tagcloud                10.0512+-1.1684     ?     10.3405+-1.5161        ? might be 1.0288x slower
string-unpack-code             20.4800+-2.4085     ?     21.4433+-1.6602        ? might be 1.0470x slower
string-validate-input           4.3592+-0.2391     ?      4.4523+-0.7633        ? might be 1.0214x slower

<arithmetic> *                  4.9845+-0.1097     ?      5.0283+-0.2336        ? might be 1.0088x slower
<geometric>                     3.8917+-0.0270     ?      3.8969+-0.1414        ? might be 1.0013x slower
<harmonic>                      3.1667+-0.0411     ?      3.1679+-0.0871        ? might be 1.0004x slower
Comment 7 WebKit Commit Bot 2013-09-27 06:39:46 PDT
Comment on attachment 212793 [details]
patch + Qt's buildfix upload for EWS

Clearing flags on attachment: 212793

Committed r156540: <http://trac.webkit.org/changeset/156540>
Comment 8 WebKit Commit Bot 2013-09-27 06:39:48 PDT
All reviewed patches have been landed.  Closing bug.