Pass VM instead of ExecState to JSDateMath functions. <https://webkit.org/b/121997>

Reviewed by Geoffrey Garen.

The JSC date math functions only need the VM, so pass that from
callers instead of the whole ExecState.


Canonical link: https://commits.webkit.org/140039@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156540 268f45cc-cd09-0410-ab3c-d52691b4dbfc