Source/JavaScriptCore/runtime/DateInstance.cpp
@@ -64,11 +64,12 @@ const GregorianDateTime* DateInstance::calculateGregorianDateTime(ExecState* exe
     if (std::isnan(milli))
         return 0;
 
+    VM& vm = exec->vm();
     if (!m_data)
-        m_data = exec->vm().dateInstanceCache.add(milli);
+        m_data = vm.dateInstanceCache.add(milli);
 
     if (m_data->m_gregorianDateTimeCachedForMS != milli) {
-        msToGregorianDateTime(exec, milli, false, m_data->m_cachedGregorianDateTime);
+        msToGregorianDateTime(vm, milli, false, m_data->m_cachedGregorianDateTime);
         m_data->m_gregorianDateTimeCachedForMS = milli;
     }
     return &m_data->m_cachedGregorianDateTime;
@@ -80,11 +81,12 @@ const GregorianDateTime* DateInstance::calculateGregorianDateTimeUTC(ExecState* 
     if (std::isnan(milli))
         return 0;
 
+    VM& vm = exec->vm();
     if (!m_data)
-        m_data = exec->vm().dateInstanceCache.add(milli);
+        m_data = vm.dateInstanceCache.add(milli);
 
     if (m_data->m_gregorianDateTimeUTCCachedForMS != milli) {
-        msToGregorianDateTime(exec, milli, true, m_data->m_cachedGregorianDateTimeUTC);
+        msToGregorianDateTime(vm, milli, true, m_data->m_cachedGregorianDateTimeUTC);
         m_data->m_gregorianDateTimeUTCCachedForMS = milli;
     }
     return &m_data->m_cachedGregorianDateTimeUTC;
