Source/JavaScriptCore/runtime/JSDateMath.h
@@ -48,13 +48,13 @@
 
 namespace JSC {
 
-class ExecState;
+class VM;
 
-void msToGregorianDateTime(ExecState*, double, bool outputIsUTC, GregorianDateTime&);
-double gregorianDateTimeToMS(ExecState*, const GregorianDateTime&, double, bool inputIsUTC);
-double getUTCOffset(ExecState*);
-double parseDateFromNullTerminatedCharacters(ExecState*, const char* dateString);
-double parseDate(ExecState*, const WTF::String&);
+void msToGregorianDateTime(VM&, double, bool outputIsUTC, GregorianDateTime&);
+double gregorianDateTimeToMS(VM&, const GregorianDateTime&, double, bool inputIsUTC);
+double getUTCOffset(VM&);
+double parseDateFromNullTerminatedCharacters(VM&, const char* dateString);
+double parseDate(VM&, const WTF::String&);
 
 } // namespace JSC
 
