Source/WebCore/bridge/qt/qt_runtime.cpp
@@ -291,7 +291,7 @@ static void getGregorianDateTimeUTC(JSContextRef context, JSRealType type, JSVal
     } else {
         double ms = JSValueToNumber(context, value, exception);
         GregorianDateTime convertedGdt;
-        msToGregorianDateTime(exec, ms, /*utc*/ true, convertedGdt);
+        msToGregorianDateTime(exec->vm(), ms, /*utc*/ true, convertedGdt);
         gdt->copyFrom(convertedGdt);
     }
 }
